<resources>
    <string name="app_name" translatable="false">Local Radio</string>

    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="automatic_location_detection">Automatic location detection</string>
    <string name="any_country">Any country</string>
    <string name="any_city">Any city</string>
    <string name="unlisted_city">Unlisted city</string>

    <string name="desc_station_icon">Station icon</string>
    <string name="desc_favorite">add/remove favorite</string>
    <string name="desc_play_pause_button">play/pause</string>
    <string name="desc_skip_previous_button">skip previous station</string>
    <string name="desc_skip_next_button">skip next station</string>
    <string name="desc_clear_country_field">clear country field</string>
    <string name="desc_clear_city_field">clear city field</string>

    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="stations">Stations</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="new_search">New search</string>
    <string name="searching">Searching…</string>

    <string name="need_permission">Need permission for the action</string>

    <string name="notification_name" translatable="false">Local Radio notification</string>
    <string name="metadata_not_available">Metadata not available</string>
    <string name="metadata_buffering">Loading…</string>

    <string name="error_specify_location">A more specific location is required</string>
    <string name="error_network">Network not available</string>
    <string name="error_connection">Connection error</string>
    <string name="error_renderer">Not supported audio stream</string>
    <string name="error_get_location">Can\'t get location</string>
    <string name="error_unexpected">Unexpected error</string>

    <string name="search_map">Map</string>
    <string name="search_manual">Manual search</string>

    <string name="selection">Selection</string>
    <string name="selection_radius">50 miles radius</string>
    <string name="selection_result_one">Selected %d station</string>
    <string name="selection_result_other">Selected %d stations</string>

    <string name="search_result_one">%d station found</string>
    <string name="search_result_other">%d stations found</string>
    <string name="search_result_radius_one">%d stations found within 50 mile radius</string>
    <string name="search_result_radius_other">%d stations found within 50 mile radius</string>
    <string name="placeholder_search_result">The search results are empty</string>
    <string name="placeholder_favorites">The favorites list is empty</string>

    <string name="second">%1$d second</string>
    <string name="seconds">%1$d seconds</string>
    <string name="settings_stream">Stream settings</string>
    <string name="settings_backup_restore">Backup and restore</string>
    <string name="settings_about">About</string>
    <string name="setting_initial_buffer">Initial buffer duration</string>
    <string name="setting_initial_buffer_desc">Initial duration of media that must be buffered for playback to start</string>
    <string name="setting_buffer">Buffer duration</string>
    <string name="setting_buffer_desc">Duration of media that must be buffered for playback to resume after a rebuffer</string>
    <string name="setting_backup">Backup stations</string>
    <string name="setting_restore">Restore stations</string>
    <string name="setting_privacy">Privacy policy</string>
    <string name="setting_description">
        Local Radio is an open source app for searching and listening to radio broadcasts over the internet.
        It can search stations by country and city and also automatically detect the location
        and perform a search based on this.
    </string>
    <string name="setting_version">Version</string>
    <string name="setting_rate_app">Rate this app</string>

    <string name="powered_by" translatable="false">Powered by\ </string>
    <string name="project_link" translatable="false">https://github.com/VladimirMi/LocalRadio</string>

    <plurals name="search_result">
        <item quantity="one">@string/search_result_one</item>
        <item quantity="other">@string/search_result_other</item>
    </plurals>
    <plurals name="search_result_radius">
        <item quantity="one">@string/search_result_radius_one</item>
        <item quantity="other">@string/search_result_radius_other</item>
    </plurals>
    <plurals name="selection_result">
        <item quantity="one">@string/selection_result_one</item>
        <item quantity="other">@string/selection_result_other</item>
    </plurals>
    <plurals name="plural_second">
        <item quantity="one">@string/second</item>
        <item quantity="other">@string/seconds</item>
    </plurals>
    <string-array name="search_pager">
        <item>@string/search_map</item>
        <item>@string/search_manual</item>
    </string-array>

</resources>
