<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>
