<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/colorPrimaryDark"
    >

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc_station_icon"
        />

    <Button
        android:id="@+id/previousBt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/playPauseBt"
        android:background="@drawable/ic_skip_previous"
        android:contentDescription="@string/desc_skip_previous_button"
        />

    <Button
        android:id="@+id/playPauseBt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_play"
        android:contentDescription="@string/desc_play_pause_button"
        />

    <Button
        android:id="@+id/nextBt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/playPauseBt"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_skip_next"
        android:contentDescription="@string/desc_skip_next_button"
        />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/iconIv"
        android:singleLine="true"
        android:textColor="@android:color/white"
        tools:text="Sunt sagaes tractare rusticus, velox triticumes."
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        />

    <TextView
        android:id="@+id/artistTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/white"
        android:layout_toEndOf="@id/iconIv"
        android:singleLine="true"
        tools:text="Sunt sagaes."
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

</RelativeLayout>